<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorWhite"
            android:padding="10dp"
            android:text="@string/main_menu_title_basic_manager"
            android:textColor="@color/colorBlack"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1px"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_menu_user_manager"
                android:onClick="onClick"
                style="@style/MainMenuItemStyle">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_vector_user_manager" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_item_user_manager" />
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/colorWindowBackground" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorWhite"
            android:padding="10dp"
            android:text="@string/main_menu_title_asset_analysis"
            android:textColor="@color/colorBlack"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1px"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_menu_trade_info"
                android:onClick="onClick"
                style="@style/MainMenuItemStyle">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_vector_trade_info" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_receipt_expenditure" />
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/colorWindowBackground" />

            <LinearLayout
                android:id="@+id/ll_menu_data_analysis"
                android:onClick="onClick"
                style="@style/MainMenuItemStyle">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_vector_data_analysis" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_item_data_analysis" />
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/colorWindowBackground" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorWhite"
            android:padding="10dp"
            android:text="@string/main_menu_title_system_manager"
            android:textColor="@color/colorBlack"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1px"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_menu_exit"
                android:onClick="onClick"
                style="@style/MainMenuItemStyle">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_vector_exit" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_item_exit" />
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/colorWindowBackground" />
        </LinearLayout>
    </LinearLayout>
</layout>
